; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/asn1/extr_check-der.c_test_integer_more.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/asn1/extr_check-der.c_test_integer_more.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @test_integer_more to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_integer_more() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 0, i32* %1, align 4
  br label %8

8:                                                ; preds = %42, %0
  %9 = load i32, i32* %1, align 4
  %10 = sext i32 %9 to i64
  %11 = icmp ult i64 %10, 32
  br i1 %11, label %12, label %45

12:                                               ; preds = %8
  %13 = load i32, i32* %1, align 4
  %14 = shl i32 1, %13
  store i32 %14, i32* %2, align 4
  %15 = load i32, i32* %3, align 4
  %16 = load i32, i32* %2, align 4
  %17 = or i32 %15, %16
  store i32 %17, i32* %3, align 4
  %18 = load i32, i32* %2, align 4
  %19 = xor i32 %18, -1
  store i32 %19, i32* %4, align 4
  %20 = load i32, i32* %3, align 4
  %21 = xor i32 %20, -1
  store i32 %21, i32* %5, align 4
  %22 = load i32, i32* %1, align 4
  %23 = shl i32 63, %22
  %24 = xor i32 %23, -1
  %25 = and i32 -1, %24
  store i32 %25, i32* %6, align 4
  %26 = load i32, i32* %1, align 4
  %27 = shl i32 127, %26
  %28 = xor i32 %27, -1
  %29 = and i32 -1, %28
  store i32 %29, i32* %7, align 4
  %30 = load i32, i32* %2, align 4
  %31 = call i32 @test_one_int(i32 %30)
  %32 = load i32, i32* %3, align 4
  %33 = call i32 @test_one_int(i32 %32)
  %34 = load i32, i32* %4, align 4
  %35 = call i32 @test_one_int(i32 %34)
  %36 = load i32, i32* %5, align 4
  %37 = call i32 @test_one_int(i32 %36)
  %38 = load i32, i32* %6, align 4
  %39 = call i32 @test_one_int(i32 %38)
  %40 = load i32, i32* %7, align 4
  %41 = call i32 @test_one_int(i32 %40)
  br label %42

42:                                               ; preds = %12
  %43 = load i32, i32* %1, align 4
  %44 = add nsw i32 %43, 1
  store i32 %44, i32* %1, align 4
  br label %8

45:                                               ; preds = %8
  ret i32 0
}

declare dso_local i32 @test_one_int(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
